--- a/thucung/css/main.css
+++ b/thucung/css/main.css
@@ -79,37 +79,40 @@ body {
 }
 /****************************************************CHUNG********************************************************/
 /*----------------------------------------------------HEADING-----------------------------------*/
+
 /*--------------LOGO-START-----------------*/
 .heading {
   display: flex;
   height: 110px;
-  width: 100%;
   background-color: rgb(255, 255, 255);
   padding-top: 5px;
 }
+
 .heading__logo {
   width: 150px;
   height: 90%;
   padding: 0 15px;
 }
+
 .heading__logo-pet {
-  border-radius: 100px;
+  border-radius: 40px;
   width: 100%;
   height: 100%;
 }
 /*--------------LOGO-END-----------------*/
+
 /*--------------FORM-START-----------------*/
 .heading__form-search {
   margin-left: 25px;
-  width: 60%;
+  width: 70%;
   height: 100%;
 }
 
 .heading__form-container {
   width: 100%;
   display: flex;
-  margin-top: 45px;
-  height: 35%;
+  margin-top: 30px;
+  height: 40%;
   border: 1px solid black;
 }
 
@@ -140,7 +143,7 @@ body {
   display: flex;
   width: 30%;
   justify-content: center;
-  margin-top: 45px;
+  margin-top: 35px;
   height: 36px;
   align-items: center;
 }
@@ -195,18 +198,20 @@ body {
   display: flex;
   justify-content: space-around;
   height: 100%;
-  padding-inline-start: 0px;
+  /* padding-inline-start: 0px; */
 }
+
 .menu__item {
   display: flex;
-  list-style: none;
-  height: 100%;
-  width: calc(100% / 6);
   position: relative;
   padding: 0 15px 0 15px;
-  align-items: center;
-  text-align: center;
+  /* list-style: none; */
+  /* height: 100%; */
+  /* width: calc(100% / 6); */
+  /* align-items: center; */
+  /* text-align: center; */
 }
+
 .nav ul li a i {
   font-size: 20px;
 }
@@ -229,9 +234,11 @@ body {
   transition: 0.5s linear;
   border-radius: 10px;
 }
+
 .menu__child-item {
   display: inline-block;
 }
+
 .menu__list {
   display: flex;
   flex-direction: column;
@@ -241,15 +248,22 @@ body {
   cursor: pointer;
   font-weight: bolder;
 }
+
 .menu__list li a {
-  margin: 5px;
+  margin: 10px;
   text-decoration: none;
   color: black;
 }
+
 .menu__list li {
   margin: 3px 0;
   padding: 5px 0;
   text-align: left;
+}
+
+.menu__list li img {
+  padding-left: 10px;
+  border-radius: 10px;
 }
 
 .menu__child {
@@ -258,14 +272,14 @@ body {
   background-color: whitesmoke;
   left: 0;
   align-self: center;
-  font-size: 1rem;
-  opacity: 0;
   visibility: hidden;
-  height: 400px;
-  z-index: 999;
+  /* font-size: 1rem; */
+  /* height: 400px; */
+  /* z-index: 999; */
+  /* opacity: 0; */
 }
 
-.menu__child--responsive {
+/* .menu__child--responsive {
   position: absolute;
   top: 100%;
   background-color: whitesmoke;
@@ -274,16 +288,19 @@ body {
   font-size: 1rem;
   display: none;
   z-index: 999;
-}
+} */
+
 .muameocanh {
-  width: 250px;
+  width: 309px;
 }
+
 .muachocanh {
-  width: 450px;
+  width: 220px;
 }
+
 .menu__list li:hover {
   background-color: var(--color-template);
-  border-radius: 10px;
+  border-radius: 20px;
 }
 /**********************HEDING-NAV-END*****************/
 /*----------------------------------------------------HEDING-END-----------------------------------*/
@@ -291,23 +308,24 @@ body {
 /* ----------------------------------------------main-slider-START----------------------------------------------*/
 .main-slider {
   display: flex;
-  height: auto;
-  width: 100%;
-  background-color: white;
-  margin-top: 5px;
-  justify-content: center;
   position: relative;
+  margin-top: 5px;
 }
+/* width: 100%; */
+/* background-color: white; */
+/* height: auto; */
+/* justify-content: center; */
 
 .main-slider__left {
   display: flex;
-  height: auto;
   width: 100%;
-  background-color: white;
   margin-top: 5px;
   justify-content: center;
-  position: relative;
 }
+/* background-color: white; */
+/* height: auto; */
+/* position: relative; */
+
 /*********************************quangcao-left-START*************************/
 .quangcao-left {
   width: 18%;
@@ -329,6 +347,7 @@ body {
   font-weight: 800;
   margin-bottom: 20px;
 }
+
 .quangcao-left__list {
   list-style: none;
   display: flex;
@@ -340,11 +359,13 @@ body {
   height: 90%;
   list-style: none;
 }
+
 .quangcao-left__list a {
   text-decoration: none;
   color: var(--color-template);
   font-size: 18px;
 }
+
 .quangcao-left__list li {
   margin: 5px 0;
 }
@@ -364,12 +385,14 @@ body {
   top: 0;
   margin-top: 5px;
 }
+
 .quangcao-right__col {
   display: flex;
   background-color: white;
   align-items: center;
   height: 65%;
 }
+
 .quangcao-right__text {
   color: var(--color-template);
   font-size: 24px;
@@ -442,6 +465,7 @@ hr {
   justify-content: center;
   border: 1px solid black;
 }
+
 .slides {
   display: flex;
   width: 500%;
@@ -456,6 +480,7 @@ hr {
 .slides input {
   display: none;
 }
+
 .manual-checked {
   width: 900px;
   margin-top: -30px;
@@ -478,18 +503,22 @@ hr {
 .manual-checked__btn:hover {
   background-color: white;
 }
+
 #radio1:checked ~ .first {
   margin-left: 0;
   transition: 0.4s linear;
 }
+
 #radio2:checked ~ .first {
   margin-left: -20%;
   transition: 0.4s linear;
 }
+
 #radio3:checked ~ .first {
   margin-left: -40%;
   transition: 0.4s linear;
 }
+
 #radio4:checked ~ .first {
   margin-left: -60%;
   transition: 0.4s linear;
@@ -510,6 +539,7 @@ hr {
 .nav-info--up p {
   margin: 2px 2px 0 15px;
 }
+
 .topSale__slider {
   width: 1250px;
   display: flex;
@@ -518,12 +548,13 @@ hr {
   padding-bottom: 30px;
   margin: 10px;
 }
+
 .topSale__slides {
   display: flex;
-  height: 360px;
-  width: 1000%;
   transition: all 0.5s linear;
 }
+/* width: 1000%; */
+/* height: 360px; */
 
 .topSale__slide img {
   object-fit: cover;
@@ -532,6 +563,7 @@ hr {
   height: 300px;
   width: 250px;
 }
+
 .topSale__slide {
   flex-basis: 50%;
   margin-bottom: 10px;
@@ -577,7 +609,7 @@ hr {
 /*-------------------------------------topSale-END------------------------------*/
 
 /*--------------------NEWS----------------------------------*/
-.news-section {
+/* .news-section {
   display: flex;
   justify-content: space-between;
 }
@@ -613,7 +645,7 @@ h5.dog-news-title,
   line-height: 1.3;
   color: var(--color-template);
   /* float: left; */
-  text-align: justify;
+  /* text-align: justify;
 }
 .dog-news-title {
   margin-left: 15px;
@@ -629,7 +661,7 @@ h5.dog-news-title,
 .comment-news {
   color: rgba(0, 0, 0, 0.5);
   font-size: 10px;
-}
+} */ */
 /*--------------------------------------------------------*/
 /*----------------------------------FOOTER-START------------------------*/
 .footer {
